log/build_2022-04-21_04-16-46/main_executor/stdout.log

[0/2] Building CXX object CMakeFiles/main_exec.dir/src/main.cpp.o[K
[1/2] Building CXX object CMakeFiles/main_exec.dir/src/main.cpp.o[K
[31mFAILED: [0mCMakeFiles/main_exec.dir/src/main.cpp.o 
/usr/bin/c++  -DDEFAULT_RMW_IMPLEMENTATION=rmw_cyclonedds_cpp -DRCUTILS_ENABLE_FAULT_INJECTION -I/home/ryuzot/ros2_ws/src/main_executor/include -isystem /home/ryuzot/ros2_ws/install/socketcan_interface/include -isystem /opt/ros/galactic/include -isystem /home/ryuzot/ros2_ws/install/socketcan_interface_msg/include -Wall -Wextra -Wpedantic -std=gnu++17 -MD -MT CMakeFiles/main_exec.dir/src/main.cpp.o -MF CMakeFiles/main_exec.dir/src/main.cpp.o.d -o CMakeFiles/main_exec.dir/src/main.cpp.o -c /home/ryuzot/ros2_ws/src/main_executor/src/main.cpp
In file included from /usr/include/x86_64-linux-gnu/c++/9/bits/c++allocator.h:33,
                 from /usr/include/c++/9/bits/allocator.h:46,
                 from /usr/include/c++/9/memory:63,
                 from /opt/ros/galactic/include/rclcpp/rclcpp.hpp:154,
                 from /home/ryuzot/ros2_ws/src/main_executor/src/main.cpp:5:
/usr/include/c++/9/ext/new_allocator.h: In instantiation of ‘void __gnu_cxx::new_allocator<_Tp>::construct(_Up*, _Args&& ...) [with _Up = socketcan_interface::SocketcanInterface; _Args = {}; _Tp = socketcan_interface::SocketcanInterface]’:
/usr/include/c++/9/bits/alloc_traits.h:483:4:   required from ‘static void std::allocator_traits<std::allocator<_Tp1> >::construct(std::allocator_traits<std::allocator<_Tp1> >::allocator_type&, _Up*, _Args&& ...) [with _Up = socketcan_interface::SocketcanInterface; _Args = {}; _Tp = socketcan_interface::SocketcanInterface; std::allocator_traits<std::allocator<_Tp1> >::allocator_type = std::allocator<socketcan_interface::SocketcanInterface>]’
/usr/include/c++/9/bits/shared_ptr_base.h:548:39:   required from ‘std::_Sp_counted_ptr_inplace<_Tp, _Alloc, _Lp>::_Sp_counted_ptr_inplace(_Alloc, _Args&& ...) [with _Args = {}; _Tp = socketcan_interface::SocketcanInterface; _Alloc = std::allocator<socketcan_interface::SocketcanInterface>; __gnu_cxx::_Lock_policy _Lp = __gnu_cxx::_S_atomic]’
/usr/include/c++/9/bits/shared_ptr_base.h:679:16:   required from ‘std::__shared_count<_Lp>::__shared_count(_Tp*&, std::_Sp_alloc_shared_tag<_Alloc>, _Args&& ...) [with _Tp = socketcan_interface::SocketcanInterface; _Alloc = std::allocator<socketcan_interface::SocketcanInterface>; _Args = {}; __gnu_cxx::_Lock_policy _Lp = __gnu_cxx::_S_atomic]’
/usr/include/c++/9/bits/shared_ptr_base.h:1344:71:   required from ‘std::__shared_ptr<_Tp, _Lp>::__shared_ptr(std::_Sp_alloc_shared_tag<_Tp>, _Args&& ...) [with _Alloc = std::allocator<socketcan_interface::SocketcanInterface>; _Args = {}; _Tp = socketcan_interface::SocketcanInterface; __gnu_cxx::_Lock_policy _Lp = __gnu_cxx::_S_atomic]’
/usr/include/c++/9/bits/shared_ptr.h:359:59:   required from ‘std::shared_ptr<_Tp>::shared_ptr(std::_Sp_alloc_shared_tag<_Tp>, _Args&& ...) [with _Alloc = std::allocator<socketcan_interface::SocketcanInterface>; _Args = {}; _Tp = socketcan_interface::SocketcanInterface]’
/usr/include/c++/9/bits/shared_ptr.h:701:14:   required from ‘std::shared_ptr<_Tp> std::allocate_shared(const _Alloc&, _Args&& ...) [with _Tp = socketcan_interface::SocketcanInterface; _Alloc = std::allocator<socketcan_interface::SocketcanInterface>; _Args = {}]’
/usr/include/c++/9/bits/shared_ptr.h:717:39:   required from ‘std::shared_ptr<_Tp> std::make_shared(_Args&& ...) [with _Tp = socketcan_interface::SocketcanInterface; _Args = {}]’
/home/ryuzot/ros2_ws/src/main_executor/src/main.cpp:12:85:   required from here
/usr/include/c++/9/ext/new_allocator.h:146:4: error: no matching function for call to ‘socketcan_interface::SocketcanInterface::SocketcanInterface()’
  146 |  { ::new((void *)__p) _Up(std::forward<_Args>(__args)...); }
      |    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/ryuzot/ros2_ws/src/main_executor/src/main.cpp:6:
/home/ryuzot/ros2_ws/src/socketcan_interface/include/socketcan_interface/socketcan_interface_node.hpp:32:9: note: candidate: ‘socketcan_interface::SocketcanInterface::SocketcanInterface(const string&, const rclcpp::NodeOptions&)’
   32 |         SocketcanInterface(const std::string& name_space, const rclcpp::NodeOptions& options = rclcpp::NodeOptions());
      |         ^~~~~~~~~~~~~~~~~~
/home/ryuzot/ros2_ws/src/socketcan_interface/include/socketcan_interface/socketcan_interface_node.hpp:32:9: note:   candidate expects 2 arguments, 0 provided
/home/ryuzot/ros2_ws/src/socketcan_interface/include/socketcan_interface/socketcan_interface_node.hpp:29:9: note: candidate: ‘socketcan_interface::SocketcanInterface::SocketcanInterface(rclcpp::NodeOptions)’
   29 |         SocketcanInterface(rclcpp::NodeOptions options);
      |         ^~~~~~~~~~~~~~~~~~
/home/ryuzot/ros2_ws/src/socketcan_interface/include/socketcan_interface/socketcan_interface_node.hpp:29:9: note:   candidate expects 1 argument, 0 provided
ninja: build stopped: subcommand failed.
